using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Common
{
    public static string FlipUp = "FlipUp";
    public static string FlipDown = "FlipDown";
    public static string Shuffle = "isShuffle";
    public static string Turn = "Luot ";
    public static string Button = "Button";
}
